# golem-garden

./: .gitattributes  .gitignore  PHILOSOPHY.md  QUICKSTART.md  README.md  forge-board-physical-ai.md  forge-board-trading.md  forge.sh  install.sh  projects.jsonl
.claude/: CLAUDE.md  settings.json  settings.local.json
.golem/: README.md  achievements.jsonl  analysis.md  forge-board-fullstack.md  forge-board.md
web/gateway/: .gitignore  README.md  pyproject.toml
web/gateway/samples/: p7-sessions-smoke.py  phase2-unit-smoke.py  phase4-registry-smoke.py  stream-json-basic.jsonl
web/gateway/src/golem_gateway/: __init__.py  activity.py  api_activity.py  api_artifacts.py  api_console.py  api_flows.py  api_forge.py  api_missions.py  api_projects.py  api_runs.py  api_sessions.py  api_skills.py  api_souls.py  api_studios.py  api_traces.py  claude_sessions.py  config.py  events.py  forge_runner.py  growth_log.py  main.py  registry.py  runs_store.py  session_manager.py  sessions_db.py  skills.py  souls.py
web/gateway/tests/: conftest.py  test_activity_board.py  test_api_artifacts.py  test_api_console.py  test_api_flows.py  test_api_missions.py  test_api_runs_contract.py  test_api_studios.py  test_api_traces.py  test_claude_sessions.py  test_drain_cancel_safety.py  test_events_thinking.py  test_flow_validate_contract.py  test_forge_runner.py  test_global_skills.py  test_growth_log_contract.py  test_rank_defaults_contract.py  test_registry.py  test_runs_store.py  test_session_manager.py  test_sessions_db.py  test_sessions_db_migration.py  test_souls_extended.py
(+400 files in other folders)
